// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderChartConfig Aggregate Merge Functions should generate SQL for an aggregate merge function 1`] = `"SELECT avgMerge(Duration),severity FROM default.logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY severity SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig Aggregate Merge Functions should generate SQL for an aggregate merge function with a condition 1`] = `"SELECT avgMergeIf(Duration, ((severity = 'ERROR')) AND toFloat64OrDefault(toString(Duration)) IS NOT NULL),severity FROM default.logs WHERE (((severity = 'ERROR'))) GROUP BY severity SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig Aggregate Merge Functions should generate SQL for an histogram merge function 1`] = `"SELECT histogramMerge(20)(Duration),severity FROM default.logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY severity SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig Aggregate Merge Functions should generate SQL for an quantile merge function with a condition 1`] = `"SELECT quantileMergeIf(0.95)(Duration, ((severity = 'ERROR')) AND toFloat64OrDefault(toString(Duration)) IS NOT NULL),severity FROM default.logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) AND (((severity = 'ERROR'))) GROUP BY severity SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig HAVING clause should not render HAVING clause when having is empty string 1`] = `"SELECT count(),severity FROM default.logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY severity SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig HAVING clause should not render HAVING clause when not provided 1`] = `"SELECT count(),severity FROM default.logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY severity SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig HAVING clause should render HAVING clause with SQL language 1`] = `"SELECT count(),severity FROM default.logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY severity HAVING count(*) > 100 SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig HAVING clause should render HAVING clause with granularity and groupBy 1`] = `"SELECT count(),event_type,toStartOfInterval(toDateTime(timestamp), INTERVAL 5 minute) AS \`__hdx_time_bucket\` FROM default.events WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY event_type,toStartOfInterval(toDateTime(timestamp), INTERVAL 5 minute) AS \`__hdx_time_bucket\` HAVING count(*) > 50 ORDER BY toStartOfInterval(toDateTime(timestamp), INTERVAL 5 minute) AS \`__hdx_time_bucket\` SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig HAVING clause should render HAVING clause with multiple conditions 1`] = `
"SELECT avg(
      toFloat64OrDefault(toString(response_time))
    ),count(),endpoint FROM default.metrics WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY endpoint HAVING avg(response_time) > 500 AND count(*) > 10 SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig SETTINGS clause should apply the "chart config" settings to the query 1`] = `"SELECT histogramMerge(20)(Duration),severity FROM default.logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY severity SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig SETTINGS clause should apply the "query settings" settings to the query 1`] = `"SELECT histogramMerge(20)(Duration),severity FROM default.logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY severity SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig SETTINGS clause should concat the "chart config" and "query setting" settings and apply them to the query 1`] = `"SELECT histogramMerge(20)(Duration),severity FROM default.logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739318400000) AND timestamp <= fromUnixTimestamp64Milli(1739491200000)) GROUP BY severity SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig containing CTE clauses should render a ChSql CTE configuration correctly 1`] = `"WITH TestCte AS (SELECT TimeUnix, Line FROM otel_logs) SELECT Line FROM TestCte SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig containing CTE clauses should render a chart config CTE configuration correctly 1`] = `"WITH Parts AS (SELECT _part, _part_offset FROM default.some_table WHERE ((FieldA = 'test')) ORDER BY rand() DESC LIMIT 1000 SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000) SELECT * FROM Parts WHERE ((FieldA = 'test') AND (indexHint((_part, _part_offset) IN (SELECT tuple(_part, _part_offset) FROM Parts)))) ORDER BY rand() DESC LIMIT 1000 SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig histogram metric queries count should generate a count query with grouping and time bucketing 1`] = `
"WITH source AS (
        SELECT
            TimeUnix,
            AggregationTemporality,
            toStartOfInterval(toDateTime(TimeUnix), INTERVAL 2 minute) AS \`__hdx_time_bucket\`,
            [ResourceAttributes['host']] AS group,
            cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS attr_hash,
            cityHash64(ExplicitBounds) AS bounds_hash,
            toInt64(Count) AS current_count,
            lagInFrame(toNullable(current_count), 1, NULL) OVER (
                PARTITION BY group, attr_hash, bounds_hash, AggregationTemporality
                ORDER BY TimeUnix
            ) AS prev_count,
            CASE
                WHEN AggregationTemporality = 1 THEN current_count
                WHEN AggregationTemporality = 2 AND prev_count IS NOT NULL
                  THEN if( 
                    current_count < prev_count,
                    current_count,
                    current_count - prev_count
                  )
                ELSE 0
            END AS delta
        FROM default.otel_metrics_histogram
        WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 2 minute) - INTERVAL 2 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 2 minute) + INTERVAL 2 minute) AND ((MetricName = 'http.server.duration'))
    ),metrics AS (
        SELECT
            \`__hdx_time_bucket\`,
group,
            sum(delta) AS "Value"
        FROM source
        GROUP BY \`__hdx_time_bucket\`, group
    ) SELECT \`__hdx_time_bucket\`, group, "Value" FROM metrics WHERE (\`__hdx_time_bucket\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket\` <= fromUnixTimestamp64Milli(1765670400000)) LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig histogram metric queries count should generate a count query without grouping but time bucketing 1`] = `
"WITH source AS (
        SELECT
            TimeUnix,
            AggregationTemporality,
            toStartOfInterval(toDateTime(TimeUnix), INTERVAL 2 minute) AS \`__hdx_time_bucket\`,
            
            cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS attr_hash,
            cityHash64(ExplicitBounds) AS bounds_hash,
            toInt64(Count) AS current_count,
            lagInFrame(toNullable(current_count), 1, NULL) OVER (
                PARTITION BY attr_hash, bounds_hash, AggregationTemporality
                ORDER BY TimeUnix
            ) AS prev_count,
            CASE
                WHEN AggregationTemporality = 1 THEN current_count
                WHEN AggregationTemporality = 2 AND prev_count IS NOT NULL
                  THEN if( 
                    current_count < prev_count,
                    current_count,
                    current_count - prev_count
                  )
                ELSE 0
            END AS delta
        FROM default.otel_metrics_histogram
        WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 2 minute) - INTERVAL 2 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 2 minute) + INTERVAL 2 minute) AND ((MetricName = 'http.server.duration'))
    ),metrics AS (
        SELECT
            \`__hdx_time_bucket\`,
            sum(delta) AS "Value"
        FROM source
        GROUP BY \`__hdx_time_bucket\`
    ) SELECT \`__hdx_time_bucket\`, "Value" FROM metrics WHERE (\`__hdx_time_bucket\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket\` <= fromUnixTimestamp64Milli(1765670400000)) LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig histogram metric queries count should generate a whole-range count query without a time dimension 1`] = `
"WITH source AS (
        SELECT
            TimeUnix,
            AggregationTemporality,
            
            
            cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS attr_hash,
            cityHash64(ExplicitBounds) AS bounds_hash,
            toInt64(Count) AS current_count,
            lagInFrame(toNullable(current_count), 1, NULL) OVER (
                PARTITION BY attr_hash, bounds_hash, AggregationTemporality
                ORDER BY TimeUnix
            ) AS prev_count,
            CASE
                WHEN AggregationTemporality = 1 THEN current_count
                WHEN AggregationTemporality = 2 AND prev_count IS NOT NULL
                  THEN if( 
                    current_count < prev_count,
                    current_count,
                    current_count - prev_count
                  )
                ELSE 0
            END AS delta
        FROM default.otel_metrics_histogram
        WHERE (TimeUnix >= fromUnixTimestamp64Milli(1739318400000) AND TimeUnix <= fromUnixTimestamp64Milli(1765670400000)) AND ((MetricName = 'http.server.duration'))
    ),metrics AS (
        SELECT
            
            sum(delta) AS "Value"
        FROM source
        
    ) SELECT "Value" FROM metrics LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig histogram metric queries quantile should generate a query with grouping and time bucketing 1`] = `
"WITH source AS (
          SELECT
            MetricName,
            ExplicitBounds,
            toStartOfInterval(toDateTime(TimeUnix), INTERVAL 2 minute) AS \`__hdx_time_bucket\`,
            group,
            sumForEach(deltas) as rates
          FROM (
            SELECT
              TimeUnix,
              MetricName,
              ExplicitBounds,
               group,
              attr_hash,
              any(attr_hash) OVER prev_row AS prev_attr_hash,
              count() OVER prev_row = 0 OR prev_attr_hash != attr_hash AS is_first_series_point,
              any(bounds_hash) OVER prev_row AS prev_bounds_hash,
              any(counts) OVER prev_row AS prev_counts,
              counts,
              multiIf(
                  AggregationTemporality = 2 AND is_first_series_point, 
                  arrayWithConstant(length(counts), toInt64(0)),

                  AggregationTemporality = 1 
                      OR bounds_hash != prev_bounds_hash 
                      OR arrayExists((x) -> x.2 < x.1, arrayZip(prev_counts, counts)), 
                  counts,

                  counts - prev_counts
              ) AS deltas
            FROM (
              SELECT
                  TimeUnix,
                  MetricName,
                  AggregationTemporality,
                  ExplicitBounds,
                  ResourceAttributes,
                  Attributes,[ServiceName] as group,
                  cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS attr_hash,
                  cityHash64(ExplicitBounds) AS bounds_hash,
                  CAST(BucketCounts AS Array(Int64)) counts
              FROM default.otel_metrics_histogram
              WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 2 minute) - INTERVAL 2 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 2 minute) + INTERVAL 2 minute) AND ((MetricName = 'http.server.duration'))
              ORDER BY group, attr_hash, TimeUnix ASC
            )
            WINDOW prev_row AS (
             PARTITION BY group
              ORDER BY attr_hash, TimeUnix
              ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING
            )
          )
          GROUP BY __hdx_time_bucket, MetricName, group, ExplicitBounds
          ORDER BY __hdx_time_bucket
          ),points AS (
          SELECT
            \`__hdx_time_bucket\`,
group,
            MetricName,
            arrayZipUnaligned(arrayCumSum(rates), ExplicitBounds) as point,
            length(point) as n
          FROM source
          ),metrics AS (
          SELECT
            \`__hdx_time_bucket\`,
group,
            MetricName,
            point[n].1 AS total,
            0.5 * total AS rank,
            arrayFirstIndex(x -> if(x.1 > rank, 1, 0), point) AS upper_idx,
            point[upper_idx].1 AS upper_count,
            ifNull(point[upper_idx].2, inf) AS upper_bound,
            CASE
              WHEN upper_idx > 1 THEN point[upper_idx - 1].2
              WHEN point[upper_idx].2 > 0 THEN 0
              ELSE inf
            END AS lower_bound,
            if (
              lower_bound = 0,
              0,
              point[upper_idx - 1].1
            ) AS lower_count,
            CASE
                WHEN upper_bound = inf THEN point[upper_idx - 1].2
                WHEN lower_bound = inf THEN point[1].2
                ELSE lower_bound + (upper_bound - lower_bound) * ((rank - lower_count) / (upper_count - lower_count))
            END AS "Value"
          FROM points
          WHERE length(point) > 1 AND total > 0
          ) SELECT \`__hdx_time_bucket\`, group, "Value" FROM metrics WHERE (\`__hdx_time_bucket\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket\` <= fromUnixTimestamp64Milli(1765670400000)) LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig histogram metric queries quantile should generate a query without grouping but time bucketing 1`] = `
"WITH source AS (
          SELECT
            MetricName,
            ExplicitBounds,
            toStartOfInterval(toDateTime(TimeUnix), INTERVAL 2 minute) AS \`__hdx_time_bucket\`,
            
            sumForEach(deltas) as rates
          FROM (
            SELECT
              TimeUnix,
              MetricName,
              ExplicitBounds,
              
              attr_hash,
              any(attr_hash) OVER prev_row AS prev_attr_hash,
              count() OVER prev_row = 0 OR prev_attr_hash != attr_hash AS is_first_series_point,
              any(bounds_hash) OVER prev_row AS prev_bounds_hash,
              any(counts) OVER prev_row AS prev_counts,
              counts,
              multiIf(
                  AggregationTemporality = 2 AND is_first_series_point, 
                  arrayWithConstant(length(counts), toInt64(0)),

                  AggregationTemporality = 1 
                      OR bounds_hash != prev_bounds_hash 
                      OR arrayExists((x) -> x.2 < x.1, arrayZip(prev_counts, counts)), 
                  counts,

                  counts - prev_counts
              ) AS deltas
            FROM (
              SELECT
                  TimeUnix,
                  MetricName,
                  AggregationTemporality,
                  ExplicitBounds,
                  ResourceAttributes,
                  Attributes,
                  cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS attr_hash,
                  cityHash64(ExplicitBounds) AS bounds_hash,
                  CAST(BucketCounts AS Array(Int64)) counts
              FROM default.otel_metrics_histogram
              WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 2 minute) - INTERVAL 2 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 2 minute) + INTERVAL 2 minute) AND ((MetricName = 'http.server.duration'))
              ORDER BY attr_hash, TimeUnix ASC
            )
            WINDOW prev_row AS (
            
              ORDER BY attr_hash, TimeUnix
              ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING
            )
          )
          GROUP BY __hdx_time_bucket, MetricName, ExplicitBounds
          ORDER BY __hdx_time_bucket
          ),points AS (
          SELECT
            \`__hdx_time_bucket\`,
            MetricName,
            arrayZipUnaligned(arrayCumSum(rates), ExplicitBounds) as point,
            length(point) as n
          FROM source
          ),metrics AS (
          SELECT
            \`__hdx_time_bucket\`,
            MetricName,
            point[n].1 AS total,
            0.5 * total AS rank,
            arrayFirstIndex(x -> if(x.1 > rank, 1, 0), point) AS upper_idx,
            point[upper_idx].1 AS upper_count,
            ifNull(point[upper_idx].2, inf) AS upper_bound,
            CASE
              WHEN upper_idx > 1 THEN point[upper_idx - 1].2
              WHEN point[upper_idx].2 > 0 THEN 0
              ELSE inf
            END AS lower_bound,
            if (
              lower_bound = 0,
              0,
              point[upper_idx - 1].1
            ) AS lower_count,
            CASE
                WHEN upper_bound = inf THEN point[upper_idx - 1].2
                WHEN lower_bound = inf THEN point[1].2
                ELSE lower_bound + (upper_bound - lower_bound) * ((rank - lower_count) / (upper_count - lower_count))
            END AS "Value"
          FROM points
          WHERE length(point) > 1 AND total > 0
          ) SELECT \`__hdx_time_bucket\`, "Value" FROM metrics WHERE (\`__hdx_time_bucket\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket\` <= fromUnixTimestamp64Milli(1765670400000)) LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig histogram metric queries quantile should generate a whole-range query without a time dimension 1`] = `
"WITH source AS (
          SELECT
            MetricName,
            ExplicitBounds,
            
            
            sumForEach(deltas) as rates
          FROM (
            SELECT
              TimeUnix,
              MetricName,
              ExplicitBounds,
              
              attr_hash,
              any(attr_hash) OVER prev_row AS prev_attr_hash,
              count() OVER prev_row = 0 OR prev_attr_hash != attr_hash AS is_first_series_point,
              any(bounds_hash) OVER prev_row AS prev_bounds_hash,
              any(counts) OVER prev_row AS prev_counts,
              counts,
              multiIf(
                  AggregationTemporality = 2 AND is_first_series_point, 
                  arrayWithConstant(length(counts), toInt64(0)),

                  AggregationTemporality = 1 
                      OR bounds_hash != prev_bounds_hash 
                      OR arrayExists((x) -> x.2 < x.1, arrayZip(prev_counts, counts)), 
                  counts,

                  counts - prev_counts
              ) AS deltas
            FROM (
              SELECT
                  TimeUnix,
                  MetricName,
                  AggregationTemporality,
                  ExplicitBounds,
                  ResourceAttributes,
                  Attributes,
                  cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS attr_hash,
                  cityHash64(ExplicitBounds) AS bounds_hash,
                  CAST(BucketCounts AS Array(Int64)) counts
              FROM default.otel_metrics_histogram
              WHERE (TimeUnix >= fromUnixTimestamp64Milli(1739318400000) AND TimeUnix <= fromUnixTimestamp64Milli(1765670400000)) AND ((MetricName = 'http.server.duration'))
              ORDER BY attr_hash, TimeUnix ASC
            )
            WINDOW prev_row AS (
            
              ORDER BY attr_hash, TimeUnix
              ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING
            )
          )
          GROUP BY  MetricName, ExplicitBounds
          
          ),points AS (
          SELECT
            
            MetricName,
            arrayZipUnaligned(arrayCumSum(rates), ExplicitBounds) as point,
            length(point) as n
          FROM source
          ),metrics AS (
          SELECT
            
            MetricName,
            point[n].1 AS total,
            0.5 * total AS rank,
            arrayFirstIndex(x -> if(x.1 > rank, 1, 0), point) AS upper_idx,
            point[upper_idx].1 AS upper_count,
            ifNull(point[upper_idx].2, inf) AS upper_bound,
            CASE
              WHEN upper_idx > 1 THEN point[upper_idx - 1].2
              WHEN point[upper_idx].2 > 0 THEN 0
              ELSE inf
            END AS lower_bound,
            if (
              lower_bound = 0,
              0,
              point[upper_idx - 1].1
            ) AS lower_count,
            CASE
                WHEN upper_bound = inf THEN point[upper_idx - 1].2
                WHEN lower_bound = inf THEN point[1].2
                ELSE lower_bound + (upper_bound - lower_bound) * ((rank - lower_count) / (upper_count - lower_count))
            END AS "Value"
          FROM points
          WHERE length(point) > 1 AND total > 0
          ) SELECT "Value" FROM metrics LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig k8s semantic convention migrations should generate SQL with metricNameSql for container.cpu.utilization histogram metric 1`] = `
"WITH source AS (
          SELECT
            MetricName,
            ExplicitBounds,
            toStartOfInterval(toDateTime(TimeUnix), INTERVAL 2 minute) AS \`__hdx_time_bucket\`,
            
            sumForEach(deltas) as rates
          FROM (
            SELECT
              TimeUnix,
              MetricName,
              ExplicitBounds,
              
              attr_hash,
              any(attr_hash) OVER prev_row AS prev_attr_hash,
              count() OVER prev_row = 0 OR prev_attr_hash != attr_hash AS is_first_series_point,
              any(bounds_hash) OVER prev_row AS prev_bounds_hash,
              any(counts) OVER prev_row AS prev_counts,
              counts,
              multiIf(
                  AggregationTemporality = 2 AND is_first_series_point, 
                  arrayWithConstant(length(counts), toInt64(0)),

                  AggregationTemporality = 1 
                      OR bounds_hash != prev_bounds_hash 
                      OR arrayExists((x) -> x.2 < x.1, arrayZip(prev_counts, counts)), 
                  counts,

                  counts - prev_counts
              ) AS deltas
            FROM (
              SELECT
                  TimeUnix,
                  MetricName,
                  AggregationTemporality,
                  ExplicitBounds,
                  ResourceAttributes,
                  Attributes,
                  cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS attr_hash,
                  cityHash64(ExplicitBounds) AS bounds_hash,
                  CAST(BucketCounts AS Array(Int64)) counts
              FROM default.otel_metrics_histogram
              WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 2 minute) - INTERVAL 2 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 2 minute) + INTERVAL 2 minute) AND ((MetricName IN ('container.cpu.utilization', 'container.cpu.usage')))
              ORDER BY attr_hash, TimeUnix ASC
            )
            WINDOW prev_row AS (
            
              ORDER BY attr_hash, TimeUnix
              ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING
            )
          )
          GROUP BY __hdx_time_bucket, MetricName, ExplicitBounds
          ORDER BY __hdx_time_bucket
          ),points AS (
          SELECT
            \`__hdx_time_bucket\`,
            MetricName,
            arrayZipUnaligned(arrayCumSum(rates), ExplicitBounds) as point,
            length(point) as n
          FROM source
          ),metrics AS (
          SELECT
            \`__hdx_time_bucket\`,
            MetricName,
            point[n].1 AS total,
            0.95 * total AS rank,
            arrayFirstIndex(x -> if(x.1 > rank, 1, 0), point) AS upper_idx,
            point[upper_idx].1 AS upper_count,
            ifNull(point[upper_idx].2, inf) AS upper_bound,
            CASE
              WHEN upper_idx > 1 THEN point[upper_idx - 1].2
              WHEN point[upper_idx].2 > 0 THEN 0
              ELSE inf
            END AS lower_bound,
            if (
              lower_bound = 0,
              0,
              point[upper_idx - 1].1
            ) AS lower_count,
            CASE
                WHEN upper_bound = inf THEN point[upper_idx - 1].2
                WHEN lower_bound = inf THEN point[1].2
                ELSE lower_bound + (upper_bound - lower_bound) * ((rank - lower_count) / (upper_count - lower_count))
            END AS "Value"
          FROM points
          WHERE length(point) > 1 AND total > 0
          ) SELECT \`__hdx_time_bucket\`, "Value" FROM metrics WHERE (\`__hdx_time_bucket\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket\` <= fromUnixTimestamp64Milli(1765670400000)) LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig k8s semantic convention migrations should generate SQL with metricNameSql for histogram metric with groupBy 1`] = `
"WITH source AS (
          SELECT
            MetricName,
            ExplicitBounds,
            toStartOfInterval(toDateTime(TimeUnix), INTERVAL 1 minute) AS \`__hdx_time_bucket\`,
            group,
            sumForEach(deltas) as rates
          FROM (
            SELECT
              TimeUnix,
              MetricName,
              ExplicitBounds,
               group,
              attr_hash,
              any(attr_hash) OVER prev_row AS prev_attr_hash,
              count() OVER prev_row = 0 OR prev_attr_hash != attr_hash AS is_first_series_point,
              any(bounds_hash) OVER prev_row AS prev_bounds_hash,
              any(counts) OVER prev_row AS prev_counts,
              counts,
              multiIf(
                  AggregationTemporality = 2 AND is_first_series_point, 
                  arrayWithConstant(length(counts), toInt64(0)),

                  AggregationTemporality = 1 
                      OR bounds_hash != prev_bounds_hash 
                      OR arrayExists((x) -> x.2 < x.1, arrayZip(prev_counts, counts)), 
                  counts,

                  counts - prev_counts
              ) AS deltas
            FROM (
              SELECT
                  TimeUnix,
                  MetricName,
                  AggregationTemporality,
                  ExplicitBounds,
                  ResourceAttributes,
                  Attributes,[ResourceAttributes['k8s.pod.name']] as group,
                  cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS attr_hash,
                  cityHash64(ExplicitBounds) AS bounds_hash,
                  CAST(BucketCounts AS Array(Int64)) counts
              FROM default.otel_metrics_histogram
              WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 1 minute) - INTERVAL 1 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 1 minute) + INTERVAL 1 minute) AND ((MetricName IN ('k8s.pod.cpu.utilization', 'k8s.pod.cpu.usage')))
              ORDER BY group, attr_hash, TimeUnix ASC
            )
            WINDOW prev_row AS (
             PARTITION BY group
              ORDER BY attr_hash, TimeUnix
              ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING
            )
          )
          GROUP BY __hdx_time_bucket, MetricName, group, ExplicitBounds
          ORDER BY __hdx_time_bucket
          ),points AS (
          SELECT
            \`__hdx_time_bucket\`,
group,
            MetricName,
            arrayZipUnaligned(arrayCumSum(rates), ExplicitBounds) as point,
            length(point) as n
          FROM source
          ),metrics AS (
          SELECT
            \`__hdx_time_bucket\`,
group,
            MetricName,
            point[n].1 AS total,
            0.99 * total AS rank,
            arrayFirstIndex(x -> if(x.1 > rank, 1, 0), point) AS upper_idx,
            point[upper_idx].1 AS upper_count,
            ifNull(point[upper_idx].2, inf) AS upper_bound,
            CASE
              WHEN upper_idx > 1 THEN point[upper_idx - 1].2
              WHEN point[upper_idx].2 > 0 THEN 0
              ELSE inf
            END AS lower_bound,
            if (
              lower_bound = 0,
              0,
              point[upper_idx - 1].1
            ) AS lower_count,
            CASE
                WHEN upper_bound = inf THEN point[upper_idx - 1].2
                WHEN lower_bound = inf THEN point[1].2
                ELSE lower_bound + (upper_bound - lower_bound) * ((rank - lower_count) / (upper_count - lower_count))
            END AS "Value"
          FROM points
          WHERE length(point) > 1 AND total > 0
          ) SELECT \`__hdx_time_bucket\`, group, "Value" FROM metrics WHERE (\`__hdx_time_bucket\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket\` <= fromUnixTimestamp64Milli(1765670400000)) LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig k8s semantic convention migrations should generate SQL with metricNameSql for k8s.node.cpu.utilization sum metric 1`] = `
"WITH Source AS (
                SELECT
                  *,
                  cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS AttributesHash,
                  IF(
                    AggregationTemporality = 1,
                    Value, -- DELTA: Value is already the per-interval increase
                    greatest(Value - lagInFrame(toNullable(Value), 1, NULL) OVER (PARTITION BY AttributesHash ORDER BY TimeUnix), 0)
                  ) AS Rate,
                  IF(
                    AggregationTemporality = 1,
                    SUM(Value) OVER (PARTITION BY AttributesHash ORDER BY TimeUnix ROWS BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW),
                    Value
                  ) AS Sum
                FROM default.otel_metrics_sum
                WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 5 minute) - INTERVAL 5 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 5 minute) + INTERVAL 5 minute) AND ((MetricName IN ('k8s.node.cpu.utilization', 'k8s.node.cpu.usage')))),Bucketed AS (
            SELECT
              \`__hdx_time_bucket2\`,
              AttributesHash,
              Rate,
              Sum,
              ResourceAttributes,
              ResourceSchemaUrl,
              ScopeName,
              ScopeVersion,
              ScopeAttributes,
              ScopeDroppedAttrCount,
              ScopeSchemaUrl,
              ServiceName,
              MetricName,
              MetricDescription,
              MetricUnit,
              Attributes,
              StartTimeUnix,
              Flags,
              AggregationTemporality,
              IsMonotonic
            FROM (
              SELECT
                toStartOfInterval(toDateTime(TimeUnix), INTERVAL 5 minute) AS \`__hdx_time_bucket2\`,
                AttributesHash,
                -- Per-bucket increase: sum of raw per-row deltas. NULL
                -- Source.Rate (first row of each partition) is ignored by sum().
                sum(Source.Rate) AS Rate,
                -- Last cumulative reading in the bucket (by time), used by
                -- the no-aggFn last_value(Sum) outer projection. argMax is
                -- deterministic w.r.t. TimeUnix ordering unlike last_value
                -- which in a GROUP BY context is anyLast (order-dependent).
                argMax(Source.Sum, TimeUnix) AS Sum,
                any(ResourceAttributes) AS ResourceAttributes,
                any(ResourceSchemaUrl) AS ResourceSchemaUrl,
                any(ScopeName) AS ScopeName,
                any(ScopeVersion) AS ScopeVersion,
                any(ScopeAttributes) AS ScopeAttributes,
                any(ScopeDroppedAttrCount) AS ScopeDroppedAttrCount,
                any(ScopeSchemaUrl) AS ScopeSchemaUrl,
                any(ServiceName) AS ServiceName,
                any(MetricName) AS MetricName,
                any(MetricDescription) AS MetricDescription,
                any(MetricUnit) AS MetricUnit,
                any(Attributes) AS Attributes,
                any(StartTimeUnix) AS StartTimeUnix,
                any(Flags) AS Flags,
                any(AggregationTemporality) AS AggregationTemporality,
                any(IsMonotonic) AS IsMonotonic
              FROM Source
              GROUP BY AttributesHash, \`__hdx_time_bucket2\`
              ORDER BY AttributesHash, \`__hdx_time_bucket2\`
            )
          ) SELECT max(
      toFloat64OrDefault(toString(Rate))
    ) AS "Value",toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` FROM Bucketed WHERE (\`__hdx_time_bucket2\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket2\` <= fromUnixTimestamp64Milli(1765670400000)) GROUP BY toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` ORDER BY toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` LIMIT 10 SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig k8s semantic convention migrations should generate SQL with metricNameSql for k8s.pod.cpu.utilization gauge metric 1`] = `
"WITH Source AS (
            SELECT
              *,
              cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS AttributesHash
            FROM default.otel_metrics_gauge
            WHERE (TimeUnix >= fromUnixTimestamp64Milli(1739318400000) AND TimeUnix <= fromUnixTimestamp64Milli(1765670400000)) AND ((MetricName IN ('k8s.pod.cpu.utilization', 'k8s.pod.cpu.usage')))
          ),Bucketed AS (
            SELECT
              toStartOfInterval(toDateTime(TimeUnix), INTERVAL 1 minute) AS \`__hdx_time_bucket2\`,
              AttributesHash,
              last_value(Value) AS LastValue,
              any(ScopeAttributes) AS ScopeAttributes,
              any(ResourceAttributes) AS ResourceAttributes,
              any(Attributes) AS Attributes,
              any(ResourceSchemaUrl) AS ResourceSchemaUrl,
              any(ScopeName) AS ScopeName,
              any(ScopeVersion) AS ScopeVersion,
              any(ScopeDroppedAttrCount) AS ScopeDroppedAttrCount,
              any(ScopeSchemaUrl) AS ScopeSchemaUrl,
              any(ServiceName) AS ServiceName,
              any(MetricDescription) AS MetricDescription,
              any(MetricUnit) AS MetricUnit,
              any(StartTimeUnix) AS StartTimeUnix,
              any(Flags) AS Flags
            FROM Source
            GROUP BY AttributesHash, __hdx_time_bucket2
            ORDER BY AttributesHash, __hdx_time_bucket2
          ) SELECT avg(
      toFloat64OrDefault(toString(LastValue))
    ),toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` FROM Bucketed WHERE (__hdx_time_bucket2 >= fromUnixTimestamp64Milli(1739318400000) AND __hdx_time_bucket2 <= fromUnixTimestamp64Milli(1765670400000)) GROUP BY toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` ORDER BY toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig k8s semantic convention migrations should handle metrics without metricNameSql (backward compatibility) 1`] = `
"WITH Source AS (
            SELECT
              *,
              cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS AttributesHash
            FROM default.otel_metrics_gauge
            WHERE (TimeUnix >= fromUnixTimestamp64Milli(1739318400000) AND TimeUnix <= fromUnixTimestamp64Milli(1765670400000)) AND ((MetricName = 'some.regular.metric'))
          ),Bucketed AS (
            SELECT
              toStartOfInterval(toDateTime(TimeUnix), INTERVAL 1 minute) AS \`__hdx_time_bucket2\`,
              AttributesHash,
              last_value(Value) AS LastValue,
              any(ScopeAttributes) AS ScopeAttributes,
              any(ResourceAttributes) AS ResourceAttributes,
              any(Attributes) AS Attributes,
              any(ResourceSchemaUrl) AS ResourceSchemaUrl,
              any(ScopeName) AS ScopeName,
              any(ScopeVersion) AS ScopeVersion,
              any(ScopeDroppedAttrCount) AS ScopeDroppedAttrCount,
              any(ScopeSchemaUrl) AS ScopeSchemaUrl,
              any(ServiceName) AS ServiceName,
              any(MetricDescription) AS MetricDescription,
              any(MetricUnit) AS MetricUnit,
              any(StartTimeUnix) AS StartTimeUnix,
              any(Flags) AS Flags
            FROM Source
            GROUP BY AttributesHash, __hdx_time_bucket2
            ORDER BY AttributesHash, __hdx_time_bucket2
          ) SELECT avg(
      toFloat64OrDefault(toString(LastValue))
    ),toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` FROM Bucketed WHERE (__hdx_time_bucket2 >= fromUnixTimestamp64Milli(1739318400000) AND __hdx_time_bucket2 <= fromUnixTimestamp64Milli(1765670400000)) GROUP BY toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` ORDER BY toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig sample-weighted aggregations should handle complex sampleWeightExpression like SpanAttributes map access 1`] = `"SELECT sum(greatest(toUInt64OrZero(toString(SpanAttributes['SampleRate'])), 1)) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig sample-weighted aggregations should handle mixed weighted and passthrough aggregations 1`] = `
"SELECT sum(greatest(toUInt64OrZero(toString(SampleRate)), 1)) AS "weighted_count",sumIf(toFloat64OrDefault(toString(Duration)) * greatest(toUInt64OrZero(toString(SampleRate)), 1), toFloat64OrDefault(toString(Duration)) IS NOT NULL) / nullIf(sumIf(greatest(toUInt64OrZero(toString(SampleRate)), 1), toFloat64OrDefault(toString(Duration)) IS NOT NULL), 0) AS "weighted_avg",min(
          toFloat64OrDefault(toString(Duration))
        ) AS "min_duration",count(DISTINCT TraceId) AS "unique_traces" FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig sample-weighted aggregations should leave count_distinct unchanged with sampleWeightExpression 1`] = `"SELECT count(DISTINCT TraceId) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig sample-weighted aggregations should leave min/max unchanged with sampleWeightExpression 1`] = `
"SELECT min(
          toFloat64OrDefault(toString(Duration))
        ),max(
          toFloat64OrDefault(toString(Duration))
        ) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig sample-weighted aggregations should rewrite avg to weighted average 1`] = `"SELECT sumIf(toFloat64OrDefault(toString(Duration)) * greatest(toUInt64OrZero(toString(SampleRate)), 1), toFloat64OrDefault(toString(Duration)) IS NOT NULL) / nullIf(sumIf(greatest(toUInt64OrZero(toString(SampleRate)), 1), toFloat64OrDefault(toString(Duration)) IS NOT NULL), 0) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig sample-weighted aggregations should rewrite avg with where condition 1`] = `"SELECT sumIf(toFloat64OrDefault(toString(Duration)) * greatest(toUInt64OrZero(toString(SampleRate)), 1), ServiceName = 'api' AND toFloat64OrDefault(toString(Duration)) IS NOT NULL) / nullIf(sumIf(greatest(toUInt64OrZero(toString(SampleRate)), 1), ServiceName = 'api' AND toFloat64OrDefault(toString(Duration)) IS NOT NULL), 0) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) AND (ServiceName = 'api') SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig sample-weighted aggregations should rewrite count() to sum(greatest(...)) 1`] = `"SELECT sum(greatest(toUInt64OrZero(toString(SampleRate)), 1)) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig sample-weighted aggregations should rewrite countIf to sumIf(greatest(...), cond) 1`] = `"SELECT sumIf(greatest(toUInt64OrZero(toString(SampleRate)), 1), StatusCode = 'Error') FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) AND (StatusCode = 'Error') SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig sample-weighted aggregations should rewrite quantile to quantileTDigestWeighted 1`] = `"SELECT quantileTDigestWeighted(0.99)(toFloat64OrDefault(toString(Duration)), toUInt32(greatest(toUInt64OrZero(toString(SampleRate)), 1))) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig sample-weighted aggregations should rewrite quantile with where condition 1`] = `"SELECT quantileTDigestWeightedIf(0.95)(toFloat64OrDefault(toString(Duration)), toUInt32(greatest(toUInt64OrZero(toString(SampleRate)), 1)), ServiceName = 'api' AND toFloat64OrDefault(toString(Duration)) IS NOT NULL) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) AND (ServiceName = 'api') SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig sample-weighted aggregations should rewrite sum to weighted sum 1`] = `"SELECT sum(toFloat64OrDefault(toString(Duration)) * greatest(toUInt64OrZero(toString(SampleRate)), 1)) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig sample-weighted aggregations should rewrite sum with where condition 1`] = `"SELECT sumIf(toFloat64OrDefault(toString(Duration)) * greatest(toUInt64OrZero(toString(SampleRate)), 1), ServiceName = 'api' AND toFloat64OrDefault(toString(Duration)) IS NOT NULL) FROM default.otel_traces WHERE (Timestamp >= fromUnixTimestamp64Milli(1739318400000) AND Timestamp <= fromUnixTimestamp64Milli(1739491200000)) AND (ServiceName = 'api') SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;

exports[`renderChartConfig should generate sql for a single gauge metric 1`] = `
"WITH Source AS (
            SELECT
              *,
              cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS AttributesHash
            FROM default.otel_metrics_gauge
            WHERE (TimeUnix >= fromUnixTimestamp64Milli(1739318400000) AND TimeUnix <= fromUnixTimestamp64Milli(1765670400000)) AND ((MetricName = 'nodejs.event_loop.utilization'))
          ),Bucketed AS (
            SELECT
              toStartOfInterval(toDateTime(TimeUnix), INTERVAL 1 minute) AS \`__hdx_time_bucket2\`,
              AttributesHash,
              last_value(Value) AS LastValue,
              any(ScopeAttributes) AS ScopeAttributes,
              any(ResourceAttributes) AS ResourceAttributes,
              any(Attributes) AS Attributes,
              any(ResourceSchemaUrl) AS ResourceSchemaUrl,
              any(ScopeName) AS ScopeName,
              any(ScopeVersion) AS ScopeVersion,
              any(ScopeDroppedAttrCount) AS ScopeDroppedAttrCount,
              any(ScopeSchemaUrl) AS ScopeSchemaUrl,
              any(ServiceName) AS ServiceName,
              any(MetricDescription) AS MetricDescription,
              any(MetricUnit) AS MetricUnit,
              any(StartTimeUnix) AS StartTimeUnix,
              any(Flags) AS Flags
            FROM Source
            GROUP BY AttributesHash, __hdx_time_bucket2
            ORDER BY AttributesHash, __hdx_time_bucket2
          ) SELECT quantile(0.95)(toFloat64OrDefault(toString(LastValue))),toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` FROM Bucketed WHERE (__hdx_time_bucket2 >= fromUnixTimestamp64Milli(1739318400000) AND __hdx_time_bucket2 <= fromUnixTimestamp64Milli(1765670400000)) GROUP BY toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` ORDER BY toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig should generate sql for a single gauge metric with a delta() function applied 1`] = `
"WITH Source AS (
            SELECT
              *,
              cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS AttributesHash
            FROM default.otel_metrics_gauge
            WHERE (TimeUnix >= fromUnixTimestamp64Milli(1739318400000) AND TimeUnix <= fromUnixTimestamp64Milli(1765670400000)) AND ((MetricName = 'nodejs.event_loop.utilization'))
          ),Bucketed AS (
            SELECT
              toStartOfInterval(toDateTime(TimeUnix), INTERVAL 1 minute) AS \`__hdx_time_bucket2\`,
              AttributesHash,
              IF(date_diff('second', min(toDateTime(TimeUnix)), max(toDateTime(TimeUnix))) > 0, (argMax(Value, TimeUnix) - argMin(Value, TimeUnix)) * 60 / date_diff('second', min(toDateTime(TimeUnix)), max(toDateTime(TimeUnix))), 0) AS LastValue,
              any(ScopeAttributes) AS ScopeAttributes,
              any(ResourceAttributes) AS ResourceAttributes,
              any(Attributes) AS Attributes,
              any(ResourceSchemaUrl) AS ResourceSchemaUrl,
              any(ScopeName) AS ScopeName,
              any(ScopeVersion) AS ScopeVersion,
              any(ScopeDroppedAttrCount) AS ScopeDroppedAttrCount,
              any(ScopeSchemaUrl) AS ScopeSchemaUrl,
              any(ServiceName) AS ServiceName,
              any(MetricDescription) AS MetricDescription,
              any(MetricUnit) AS MetricUnit,
              any(StartTimeUnix) AS StartTimeUnix,
              any(Flags) AS Flags
            FROM Source
            GROUP BY AttributesHash, __hdx_time_bucket2
            ORDER BY AttributesHash, __hdx_time_bucket2
          ) SELECT max(
      toFloat64OrDefault(toString(LastValue))
    ),toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` FROM Bucketed WHERE (__hdx_time_bucket2 >= fromUnixTimestamp64Milli(1739318400000) AND __hdx_time_bucket2 <= fromUnixTimestamp64Milli(1765670400000)) GROUP BY toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` ORDER BY toStartOfInterval(toDateTime(__hdx_time_bucket2), INTERVAL 1 minute) AS \`__hdx_time_bucket\` LIMIT 10 SETTINGS short_circuit_function_evaluation = 'force_enable', optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig should generate sql for a single sum metric 1`] = `
"WITH Source AS (
                SELECT
                  *,
                  cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS AttributesHash,
                  IF(
                    AggregationTemporality = 1,
                    Value, -- DELTA: Value is already the per-interval increase
                    greatest(Value - lagInFrame(toNullable(Value), 1, NULL) OVER (PARTITION BY AttributesHash ORDER BY TimeUnix), 0)
                  ) AS Rate,
                  IF(
                    AggregationTemporality = 1,
                    SUM(Value) OVER (PARTITION BY AttributesHash ORDER BY TimeUnix ROWS BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW),
                    Value
                  ) AS Sum
                FROM default.otel_metrics_sum
                WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 5 minute) - INTERVAL 5 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 5 minute) + INTERVAL 5 minute) AND ((MetricName = 'db.client.connections.usage'))),Bucketed AS (
            SELECT
              \`__hdx_time_bucket2\`,
              AttributesHash,
              Rate,
              Sum,
              ResourceAttributes,
              ResourceSchemaUrl,
              ScopeName,
              ScopeVersion,
              ScopeAttributes,
              ScopeDroppedAttrCount,
              ScopeSchemaUrl,
              ServiceName,
              MetricName,
              MetricDescription,
              MetricUnit,
              Attributes,
              StartTimeUnix,
              Flags,
              AggregationTemporality,
              IsMonotonic
            FROM (
              SELECT
                toStartOfInterval(toDateTime(TimeUnix), INTERVAL 5 minute) AS \`__hdx_time_bucket2\`,
                AttributesHash,
                -- Per-bucket increase: sum of raw per-row deltas. NULL
                -- Source.Rate (first row of each partition) is ignored by sum().
                sum(Source.Rate) AS Rate,
                -- Last cumulative reading in the bucket (by time), used by
                -- the no-aggFn last_value(Sum) outer projection. argMax is
                -- deterministic w.r.t. TimeUnix ordering unlike last_value
                -- which in a GROUP BY context is anyLast (order-dependent).
                argMax(Source.Sum, TimeUnix) AS Sum,
                any(ResourceAttributes) AS ResourceAttributes,
                any(ResourceSchemaUrl) AS ResourceSchemaUrl,
                any(ScopeName) AS ScopeName,
                any(ScopeVersion) AS ScopeVersion,
                any(ScopeAttributes) AS ScopeAttributes,
                any(ScopeDroppedAttrCount) AS ScopeDroppedAttrCount,
                any(ScopeSchemaUrl) AS ScopeSchemaUrl,
                any(ServiceName) AS ServiceName,
                any(MetricName) AS MetricName,
                any(MetricDescription) AS MetricDescription,
                any(MetricUnit) AS MetricUnit,
                any(Attributes) AS Attributes,
                any(StartTimeUnix) AS StartTimeUnix,
                any(Flags) AS Flags,
                any(AggregationTemporality) AS AggregationTemporality,
                any(IsMonotonic) AS IsMonotonic
              FROM Source
              GROUP BY AttributesHash, \`__hdx_time_bucket2\`
              ORDER BY AttributesHash, \`__hdx_time_bucket2\`
            )
          ) SELECT avg(
      toFloat64OrDefault(toString(Rate))
    ) AS "Value",toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` FROM Bucketed WHERE (\`__hdx_time_bucket2\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket2\` <= fromUnixTimestamp64Milli(1765670400000)) GROUP BY toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` ORDER BY toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` LIMIT 10 SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig should generate sql for a sum metric with aggFn=increase (Use Increase) 1`] = `
"WITH Source AS (
                SELECT
                  *,
                  cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS AttributesHash,
                  IF(
                    AggregationTemporality = 1,
                    Value, -- DELTA: Value is already the per-interval increase
                    greatest(Value - lagInFrame(toNullable(Value), 1, NULL) OVER (PARTITION BY AttributesHash ORDER BY TimeUnix), 0)
                  ) AS Rate,
                  IF(
                    AggregationTemporality = 1,
                    SUM(Value) OVER (PARTITION BY AttributesHash ORDER BY TimeUnix ROWS BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW),
                    Value
                  ) AS Sum
                FROM default.otel_metrics_sum
                WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 5 minute) - INTERVAL 5 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 5 minute) + INTERVAL 5 minute) AND ((MetricName = 'db.client.connections.usage'))),Bucketed AS (
            SELECT
              \`__hdx_time_bucket2\`,
              AttributesHash,
              Rate,
              Sum,
              ResourceAttributes,
              ResourceSchemaUrl,
              ScopeName,
              ScopeVersion,
              ScopeAttributes,
              ScopeDroppedAttrCount,
              ScopeSchemaUrl,
              ServiceName,
              MetricName,
              MetricDescription,
              MetricUnit,
              Attributes,
              StartTimeUnix,
              Flags,
              AggregationTemporality,
              IsMonotonic
            FROM (
              SELECT
                toStartOfInterval(toDateTime(TimeUnix), INTERVAL 5 minute) AS \`__hdx_time_bucket2\`,
                AttributesHash,
                -- Per-bucket increase: sum of raw per-row deltas. NULL
                -- Source.Rate (first row of each partition) is ignored by sum().
                sum(Source.Rate) AS Rate,
                -- Last cumulative reading in the bucket (by time), used by
                -- the no-aggFn last_value(Sum) outer projection. argMax is
                -- deterministic w.r.t. TimeUnix ordering unlike last_value
                -- which in a GROUP BY context is anyLast (order-dependent).
                argMax(Source.Sum, TimeUnix) AS Sum,
                any(ResourceAttributes) AS ResourceAttributes,
                any(ResourceSchemaUrl) AS ResourceSchemaUrl,
                any(ScopeName) AS ScopeName,
                any(ScopeVersion) AS ScopeVersion,
                any(ScopeAttributes) AS ScopeAttributes,
                any(ScopeDroppedAttrCount) AS ScopeDroppedAttrCount,
                any(ScopeSchemaUrl) AS ScopeSchemaUrl,
                any(ServiceName) AS ServiceName,
                any(MetricName) AS MetricName,
                any(MetricDescription) AS MetricDescription,
                any(MetricUnit) AS MetricUnit,
                any(Attributes) AS Attributes,
                any(StartTimeUnix) AS StartTimeUnix,
                any(Flags) AS Flags,
                any(AggregationTemporality) AS AggregationTemporality,
                any(IsMonotonic) AS IsMonotonic
              FROM Source
              GROUP BY AttributesHash, \`__hdx_time_bucket2\`
              ORDER BY AttributesHash, \`__hdx_time_bucket2\`
            )
          ) SELECT sum(
      toFloat64OrDefault(toString(Rate))
    ) AS "Value",toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` FROM Bucketed WHERE (\`__hdx_time_bucket2\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket2\` <= fromUnixTimestamp64Milli(1765670400000)) GROUP BY toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` ORDER BY toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` LIMIT 10 SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig should limit aggFn=increase + groupBy to the top 20 groups via a TopGroups CTE 1`] = `
"WITH Source AS (
                SELECT
                  *,
                  cityHash64(ScopeAttributes, ResourceAttributes, Attributes) AS AttributesHash,
                  IF(
                    AggregationTemporality = 1,
                    Value, -- DELTA: Value is already the per-interval increase
                    greatest(Value - lagInFrame(toNullable(Value), 1, NULL) OVER (PARTITION BY AttributesHash ORDER BY TimeUnix), 0)
                  ) AS Rate,
                  IF(
                    AggregationTemporality = 1,
                    SUM(Value) OVER (PARTITION BY AttributesHash ORDER BY TimeUnix ROWS BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW),
                    Value
                  ) AS Sum
                FROM default.otel_metrics_sum
                WHERE (TimeUnix >= toStartOfInterval(fromUnixTimestamp64Milli(1739318400000), INTERVAL 5 minute) - INTERVAL 5 minute AND TimeUnix <= toStartOfInterval(fromUnixTimestamp64Milli(1765670400000), INTERVAL 5 minute) + INTERVAL 5 minute) AND ((MetricName = 'db.client.connections.usage'))),Bucketed AS (
            SELECT
              \`__hdx_time_bucket2\`,
              AttributesHash,
              Rate,
              Sum,
              ResourceAttributes,
              ResourceSchemaUrl,
              ScopeName,
              ScopeVersion,
              ScopeAttributes,
              ScopeDroppedAttrCount,
              ScopeSchemaUrl,
              ServiceName,
              MetricName,
              MetricDescription,
              MetricUnit,
              Attributes,
              StartTimeUnix,
              Flags,
              AggregationTemporality,
              IsMonotonic
            FROM (
              SELECT
                toStartOfInterval(toDateTime(TimeUnix), INTERVAL 5 minute) AS \`__hdx_time_bucket2\`,
                AttributesHash,
                -- Per-bucket increase: sum of raw per-row deltas. NULL
                -- Source.Rate (first row of each partition) is ignored by sum().
                sum(Source.Rate) AS Rate,
                -- Last cumulative reading in the bucket (by time), used by
                -- the no-aggFn last_value(Sum) outer projection. argMax is
                -- deterministic w.r.t. TimeUnix ordering unlike last_value
                -- which in a GROUP BY context is anyLast (order-dependent).
                argMax(Source.Sum, TimeUnix) AS Sum,
                any(ResourceAttributes) AS ResourceAttributes,
                any(ResourceSchemaUrl) AS ResourceSchemaUrl,
                any(ScopeName) AS ScopeName,
                any(ScopeVersion) AS ScopeVersion,
                any(ScopeAttributes) AS ScopeAttributes,
                any(ScopeDroppedAttrCount) AS ScopeDroppedAttrCount,
                any(ScopeSchemaUrl) AS ScopeSchemaUrl,
                any(ServiceName) AS ServiceName,
                any(MetricName) AS MetricName,
                any(MetricDescription) AS MetricDescription,
                any(MetricUnit) AS MetricUnit,
                any(Attributes) AS Attributes,
                any(StartTimeUnix) AS StartTimeUnix,
                any(Flags) AS Flags,
                any(AggregationTemporality) AS AggregationTemporality,
                any(IsMonotonic) AS IsMonotonic
              FROM Source
              GROUP BY AttributesHash, \`__hdx_time_bucket2\`
              ORDER BY AttributesHash, \`__hdx_time_bucket2\`
            )
          ),TopGroups AS (
            SELECT \`group\`
            FROM (
              SELECT
                tuple(ServiceName) AS \`group\`,
                sum(Rate) AS \`bucket_value\`
              FROM Bucketed
              WHERE (ServiceName IS NOT NULL AND toString(ServiceName) != '')
              GROUP BY \`group\`, \`__hdx_time_bucket2\`
            )
            GROUP BY \`group\`
            ORDER BY max(\`bucket_value\`) DESC, \`group\`
            LIMIT 20
          ) SELECT sum(
      toFloat64OrDefault(toString(Rate))
    ) AS "Value",ServiceName,toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` FROM Bucketed WHERE (\`__hdx_time_bucket2\` >= fromUnixTimestamp64Milli(1739318400000) AND \`__hdx_time_bucket2\` <= fromUnixTimestamp64Milli(1765670400000)) AND (tuple(ServiceName) IN (SELECT \`group\` FROM TopGroups)) GROUP BY ServiceName,toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` ORDER BY toStartOfInterval(toDateTime(\`__hdx_time_bucket2\`), INTERVAL 5 minute) AS \`__hdx_time_bucket\` LIMIT 100000 SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"
`;

exports[`renderChartConfig should not generate invalid SQL when primary key wraps toStartOfInterval 1`] = `"SELECT timestamp, cluster_id, service_id FROM default.http_request_logs WHERE (timestamp >= fromUnixTimestamp64Milli(1739319154000) AND timestamp <= fromUnixTimestamp64Milli(1739491954000)) LIMIT 200 OFFSET 0 SETTINGS optimize_read_in_order = 0, cast_keep_nullable = 1, additional_result_filter = 'x != 2', count_distinct_implementation = 'uniqCombined64', async_insert_busy_timeout_min_ms = 20000"`;
